feat: add api to extend expiration time of a file
