# docs/swagger.yaml
@@ -42,6 +42,8 @@ definitions:
         type: boolean
       torrentFileExpireDelayFactor:
         type: number
+      torrentFileExpireExtendHour:
+        type: integer
       torrentFilesExpireHour:
         type: integer
       torrentFilesServingConcurrencyLimit:
@@ -124,6 +126,14 @@ definitions:
     properties:
       code:
         type: integer
+      errorMessage:
+        type: string
+    type: object
+  response.ResponseOKWithDataModel:
+    properties:
+      code:
+        type: integer
+      data: {}
       errorMessage:
         type: string
     type: object
@@ -303,6 +313,37 @@ paths:
       security:
       - BearerAuth: []
       summary: Download Torrent
+      tags:
+      - Torrent-Download
+  /v1/torrent/extend_expire_time/:filename:
+    put:
+      description: add time to expiration of local files
+      parameters:
+      - description: filename
+        in: path
+        name: filename
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.ResponseOKWithDataModel'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ResponseErrorModel'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/response.ResponseErrorModel'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/response.ResponseErrorModel'
+      security:
+      - BearerAuth: []
+      summary: Extend Expire Time
       tags:
       - Torrent-Download
   /v1/torrent/remove/:filename:
